@@ -3,6 +3,8 @@ Changelog
 
 1.2-dev - (unreleased)
 ----------------------
+* Bugfix: Use pycurl instead of urllib2
+  [szabozo0 refs #14349]
 
 1.1 - (2013-03-15)
 ------------------
